[project]
name = "cms-hospitals"
version = "0.1.0"
description = "Incremental daily ingestion of CMS 'Hospitals' theme datasets"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.scripts]
cms-hospitals = "cms_hospitals.pipeline:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_hospitals"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-httpx>=0.30",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: end-to-end tests requiring full pipeline setup"]
